# persona-http

./: .gitignore  .gitmodules  AGENTS.md  AUTOMATIC_CLEANUP.md  Cargo.toml  NAPI_PORT_PLAN.md  README.md  browser.js  index.d.ts  index.js  nitai.wasi-browser.js  package.json  persona-http.wasi.cjs  pnpm-lock.yaml  rnet-node.wasi-browser.js  rnet-node.wasi.cjs  simple-test.js  test-automatic-cleanup.js
.cargo/: config.toml
.github/workflows/: CI.yml
__test__/: index.spec.ts
bindings/core/: Cargo.toml
bindings/core/src/: client.rs  error.rs  lib.rs  request.rs  response.rs  websocket.rs
bindings/core/src/client/: dns.rs
ci/: zig-ar-wrapper.sh  zig-cc-wrapper.sh  zig-cxx-wrapper.sh  zig-ranlib-wrapper.sh
cmake/toolchains/: napi-armv7-gnueabihf.cmake  zig-gnu-aarch64.cmake  zig-musl-aarch64.cmake  zig-musl-x86_64.cmake
src/: client_options.rs  emulation.rs  error.rs  lib.rs  request_options.rs  response_handle.rs
